--- a/index.css
+++ b/index.css
@@ -17,7 +17,7 @@ body{
   background-position: -18rem -15rem, calc(100vw - 10rem) calc(100vh - 15rem);
   display:flex;
   flex-direction:column;
-  justify-content:space-evenly;
+  justify-content:center;
   align-items:center;
 }
 .card{
