--- a/index.css
+++ b/index.css
@@ -21,13 +21,13 @@ body{
   align-items:center;
 }
 .card{
-  max-width:400px;
+  max-width:360px;
   min-width:320px;
   width:80%;
   margin:0 auto 20px;
   overflow: hidden;
   border-radius:20px;
-  box-shadow:0 80px 80px hsl(229, 23%, 43%);
+  box-shadow:0 80px 80px rgba(6, 6, 6, 0.22);
   background:#fff;
 }
 .cover{
